<resources>
    <string name="app_name">Delicious</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="phone_number">+(Code) | Numero du téléphone</string>
    <string name="edt_mail">Adresse e-mail</string>
    <string name="edt_address">Adresse</string>
    <string name="password">Mot de passe</string>
    <string name="btn_register">Créer compte</string>
    <string name="btn_register_profile">Sauvegarder</string>
    <string name="btn_profile_photo">Photo du profile</string>
    <string name="btn_login">Connexion</string>
    <string name="btn_verification_code">Suivent</string>
    <string name="edt_verification_code">_ _ _ \t\t _ _ _</string>
    <string name="app_bar_login">Se connecter</string>
    <string name="app_bar_register">Créer compte</string>
    <string name="tv_explorer">EXPLORER</string>
    <string name="tv_verify">Vérifier</string>
    <string name="tv_verify_detail">En attente de la détection automatique du SMS envoyé au</string>
    <string name="tv_instruction_auth">Delicious enverra un message pour vérifier votre numéro de téléphone.\nEntrer
        votre code de pays suivit du numéro de téléphone.
    </string>
    <string name="tv_resend_sms">
        <u>Reenvoyer SMS</u>
    </string>
    <string name="tv_already_register">
        <u>Déjà un compte ?</u>
    </string>
    <string name="tv_do_not_have_account">
        <u>Pas encore créé de compte ?</u>
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Delicious</string>
    <string name="nav_header_subtitle">delicious@restaurent.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Parametres</string>
    <string name="action_sign_out">Déconnecter</string>

    <string name="menu_restaurant">Restaurant</string>
    <string name="menu_addresses">Adresses</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_more_information">Plus d\'info</string>
    <string name="menu_contact_us">Contactez-nous</string>
    <string name="menu_about">A propos</string>
    <string name="tv_about_large_text">"Delicious 1.0\n"
        "est une application mobile conçu par Synapse-hub qui gere les restaurants de la ville de Goma, grace a cette"
        " application vous pouvez commander des nourritures a distance et payer puis vous recevrez tout la ou vous etes"
        " c'est super cette application, telechager la nouvelle version sur play store et enjoy your app."
    </string>
    <string name="tv_contact_us_large_text_title">Pour plus d\'information contactez-nous sur:</string>
    <string name="tv_contact_us_large_text">
        " Site web: synapse-hub.net\n"
        "Email: synapse-hub@synapse.net\n\n"
        "Téléphone: +(243) 977 200 045\n"
        " 811 704 141\n"
        " 976 629 323\n\n"
        "Github: https://github.com/SynapseHub\n"
        "Tweeter: @SynapseHub"
    </string>

    <string name="welcome_back">Bienvenue</string>
    <string name="read_it_together">Vos restaurants à votre portée</string>
    <string name="booki">Vos restaurants à votre portée</string>
    <string name="skip">Ignorer</string>
    <string name="login">Se Connecter</string>
    <string name="email">Email</string>
    <string name="sign_up">S\'enregistrer</string>
    <string name="forget_password">Mot de passe oublié ?</string>
</resources>
