<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_restaurent_menu"
                android:icon="@drawable/ic_restaurant_black_24dp"
                android:title="@string/menu_restaurant"/>
        <item
                android:id="@+id/nav_addresses_menu"
                android:icon="@drawable/ic_address_black_24dp"
                android:title="@string/menu_addresses"/>
        <item
                android:id="@+id/nav_profile_menu"
                android:icon="@drawable/ic_profile_black_24dp"
                android:title="@string/menu_profile"/>
    </group>

    <item android:title="@string/menu_more_information">
        <menu>
            <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_phone_contact_black_24dp"
                    android:title="@string/menu_contact_us"/>
            <item
                    android:id="@+id/nav_about_menu"
                    android:icon="@drawable/ic_about_black_24dp"
                    android:title="@string/menu_about"/>
        </menu>
    </item>

</menu>
