<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserProfile">

    <TextView
            android:text="@string/tv_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:textSize="22sp"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" android:padding="10dp"
            android:ems="10" android:background="@drawable/rounded_user_profile_edittext"
            android:id="@+id/edit_text_username" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp" android:hint="@string/username"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.503"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" android:padding="10dp"
            android:ems="10" android:background="@drawable/rounded_user_profile_edittext"
            android:id="@+id/edit_text_email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_username"
            app:layout_constraintStart_toStartOf="@+id/edit_text_username"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_username" android:hint="@string/email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" android:padding="10dp"
            android:ems="10" android:background="@drawable/rounded_user_profile_edittext"
            android:id="@+id/edit_text_password"
            app:layout_constraintStart_toStartOf="@+id/edit_text_email"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_text_email"
            android:hint="@string/password"/>
    <Button
            android:layout_width="0dp" android:textColor="@android:color/white"
            android:layout_height="wrap_content" android:background="@drawable/rounded_btn_save_user_profile_login"
            android:id="@+id/btn_save_user_profile" app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password" android:text="@string/btn_register_profile"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_text_password"/>
</android.support.constraint.ConstraintLayout>