<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".registration.PhoneAuthActivity"
        tools:layout_editor_absoluteY="81dp">


    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="phone"
            android:ems="10"
            android:background="@drawable/rounded_profile_edittext"
            android:paddingLeft="5dp"
            android:drawableLeft="@drawable/ic_phone_number_login_black_24dp"
            android:drawablePadding="5dp"
            android:id="@+id/edt_phone_number_authentication" android:hint="@string/phone_number"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_verification_code_authentication"
            app:layout_constraintStart_toStartOf="@+id/btn_verification_code_authentication"
            app:layout_constraintEnd_toEndOf="@+id/btn_verification_code_authentication"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="number" android:drawableLeft="@drawable/ic_verified_code_login_black_24dp"
            android:drawablePadding="-25dp" android:paddingLeft="5dp"
            android:ems="10" android:textAlignment="center"
            android:id="@+id/edt_virification_authentication"
            android:hint="@string/edt_verification_code"
            android:background="@drawable/rounded_profile_edittext"
            app:layout_constraintEnd_toEndOf="@+id/btn_auth_authentication"
            app:layout_constraintStart_toStartOf="@+id/btn_auth_authentication" android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_auth_authentication"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="195dp" app:srcCompat="@drawable/img_login_screen_salate"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/btn_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_verification_code_authentication" android:textColor="@android:color/holo_red_dark"
            android:background="@drawable/rounded_btn_verification_code_auth"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/edt_virification_authentication"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/edt_virification_authentication"
            app:layout_constraintEnd_toEndOf="@+id/edt_virification_authentication"/>

    <TextView
            android:text="@string/tv_resend_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_resend_sms_phone_auth_verification"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/edt_phone_number_authentication"
            app:layout_constraintStart_toStartOf="@+id/edt_phone_number_authentication"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>


    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/progressBar" android:visibility="invisible"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:text="@string/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_auth_authentication"
            android:background="@drawable/rounded_btn_login_login"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginBottom="24dp"/>

</android.support.constraint.ConstraintLayout>