<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".registration.LoginActivity">


    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="phone"
            android:ems="10"
            android:background="@drawable/rounded_profile_edittext"
            android:paddingLeft="5dp"
            android:drawableLeft="@drawable/phone_number_icon_login"
            android:drawablePadding="5dp"
            android:id="@+id/edt_phone_number_authentication" android:hint="@string/phone_number"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="11dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <Button
            android:text="@string/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_auth_authentication"
            android:background="@drawable/rounded_btn_login_login"
            android:textColor="@android:color/white"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_verification_code_authentication"
            app:layout_constraintEnd_toEndOf="@+id/edt_virification_authentication"
            app:layout_constraintStart_toStartOf="@+id/edt_virification_authentication"/>
    <ImageView
            android:layout_width="256dp"
            android:layout_height="190dp" app:srcCompat="@drawable/img_login_screen_salate"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="number" android:drawableLeft="@drawable/verification_code" android:drawablePadding="-25dp"
            android:ems="10" android:textAlignment="center"
            android:id="@+id/edt_virification_authentication"
            android:hint="@string/edt_verification_code" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_phone_number_authentication"
            app:layout_constraintStart_toStartOf="@+id/edt_phone_number_authentication"
            app:layout_constraintEnd_toEndOf="@+id/edt_phone_number_authentication"/>
    <Button
            android:text="@string/btn_verification_code"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_verification_code_authentication" android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="8dp" android:background="@drawable/rounded_btn_verification_code_auth"
            app:layout_constraintTop_toBottomOf="@+id/edt_virification_authentication" android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>