<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context=".registration.PhoneAuthActivity2">

    <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:ems="10" android:hint="@string/edt_verification_code"
            android:id="@+id/edt_verification_code"
            android:inputType="number" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:gravity="center"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_connexion" app:layout_constraintEnd_toEndOf="@+id/edt_verification_code"
            app:layout_constraintStart_toStartOf="@+id/edt_verification_code" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_verification_code"
            android:text="@string/btn_login" android:background="@drawable/green_color"
            android:textColor="@android:color/white"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"/>
    <TextView
            android:text="@string/tv_verify"
            android:layout_width="85sp" android:textStyle="bold"
            android:layout_height="wrap_content" android:textColor="@color/colorPrimary"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp" app:layout_constraintEnd_toStartOf="@+id/tv_verify"
            app:layout_constraintHorizontal_bias="0.933" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:layout_width="195sp" android:gravity="center"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:id="@+id/tv_verify" android:textSize="24sp" android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp" android:layout_marginRight="52dp"/>
    <TextView
            android:text="@string/tv_verify_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_verify" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:textColor="@android:color/black"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_phone_number_to_verify"
            android:textColor="@android:color/black"
            android:textStyle="bold" android:text="phone number"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.37"/>
</android.support.constraint.ConstraintLayout>